--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,14 +59,14 @@ jobs:
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
-      - name: Copy Environment File
-        run: cp .env.example .env
-
       - name: Generate Application Key
         run: php artisan key:generate
 
       - name: Publish Ziggy Configuration
         run: php artisan ziggy:generate
+
+      - name: Run migrations
+        run: php artisan migrate
 
       - name: Build Assets
         run: npm run build
