--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,16 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
+    env:
+      BROADCAST_DRIVER: log
+      CACHE_DRIVER: database
+      QUEUE_CONNECTION: database
+      SESSION_DRIVER: database
+      DB_CONNECTION: pgsql
+      DB_HOST: localhost
+      DB_PASSWORD: postgres
+      DB_USERNAME: postgres
+      DB_DATABASE: postgres
     services:
       postgres:
         image: postgres:latest
@@ -49,11 +59,14 @@ jobs:
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
+      - name: Copy Environment File
+        run: cp .env.example .env
+
+      - name: Generate Application Key
+        run: php artisan key:generate
+
       - name: Publish Ziggy Configuration
         run: php artisan ziggy:generate
-
-      - name: Run migrations
-        run: php artisan migrate
 
       - name: Build Assets
         run: npm run build
