--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,75 +1,69 @@
-name: tests
+name: Test Laravel App with PostGIS
 
 on:
   push:
-    branches:
-      - develop
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - develop
-      - main
+    branches: [main]
 
 jobs:
-  ci:
+  laravel-tests:
     runs-on: ubuntu-latest
-    env:
-      BROADCAST_DRIVER: log
-      CACHE_DRIVER: database
-      QUEUE_CONNECTION: database
-      SESSION_DRIVER: database
-      DB_CONNECTION: pgsql
-      DB_HOST: localhost
-      DB_PASSWORD: postgres
-      DB_USERNAME: postgres
-      DB_DATABASE: postgres
+
     services:
       postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
+        image: postgis/postgis:15-3.3
         ports:
-          - 5432/tcp
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
-    strategy:
-      fail-fast: false
+          - 5432:5432
+        env:
+          POSTGRES_DB: laravel
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup PHP
+      - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.4
-          tools: composer:v2
-          coverage: xdebug
+          php-version: 8.2
+          extensions: pdo, pdo_pgsql
+          tools: composer
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          cache: 'npm'
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress --no-interaction
 
-      - name: Install Node Dependencies
-        run: npm ci
-
-      - name: Install Dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
-
-      - name: Copy Environment File
+      - name: Copy .env
         run: cp .env.example .env
 
-      - name: Generate Application Key
+      - name: Generate app key
         run: php artisan key:generate
 
-      - name: Publish Ziggy Configuration
-        run: php artisan ziggy:generate
+      - name: Configure .env for PostgreSQL
+        run: |
+          sed -i 's/DB_CONNECTION=.*/DB_CONNECTION=pgsql/' .env
+          sed -i 's/DB_HOST=.*/DB_HOST=127.0.0.1/' .env
+          sed -i 's/DB_PORT=.*/DB_PORT=5432/' .env
+          sed -i 's/DB_DATABASE=.*/DB_DATABASE=laravel/' .env
+          sed -i 's/DB_USERNAME=.*/DB_USERNAME=postgres/' .env
+          sed -i 's/DB_PASSWORD=.*/DB_PASSWORD=password/' .env
 
-      - name: Build Assets
-        run: npm run build
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..15}; do
+            pg_isready -h 127.0.0.1 -p 5432 -U postgres && break
+            echo "Waiting for Postgres..."
+            sleep 2
+          done
 
-      - name: Tests
-        run: ./vendor/bin/pest
+      - name: Run migrations
+        run: php artisan migrate --force
+
+      - name: Run tests
+        run: php artisan test
