--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,9 +35,18 @@ jobs:
           php-version: 8.2
           extensions: pdo, pdo_pgsql
           tools: composer
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
 
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-interaction
+      - name: install npm dependencies
+        run: npm i
+      - name: build frontend assets
+        run: npm run build
 
       - name: Copy .env
         run: cp .env.example .env
