--- a/.env.testing
+++ b/.env.testing
@@ -13,7 +13,7 @@ APP_MAINTENANCE_DRIVER=file
 
 PHP_CLI_SERVER_WORKERS=4
 
-BCRYPT_ROUNDS=12
+BCRYPT_ROUNDS=4
 
 LOG_CHANNEL=stack
 LOG_STACK=single
@@ -21,13 +21,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=postgres
+DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=postgres
+DB_DATABASE=project-0-testing
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=root
 
-SESSION_DRIVER=database
+SESSION_DRIVER=array
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -35,9 +35,9 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
 
-CACHE_STORE=database
+CACHE_STORE=array
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -47,7 +47,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
+MAIL_MAILER=array
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
