--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,13 +48,7 @@ jobs:
       - name: build frontend assets
         run: npm run build
 
-      - name: Copy .env
-        run: cp .env.example .env
-
-      - name: Generate app key
-        run: php artisan key:generate
-
-      - name: Configure .env for PostgreSQL
+      - name: Configure .env.testing for PostgreSQL
         run: |
           sed -i 's/DB_CONNECTION=.*/DB_CONNECTION=pgsql/' .env.testing
           sed -i 's/DB_HOST=.*/DB_HOST=127.0.0.1/' .env.testing
@@ -77,4 +71,4 @@ jobs:
         run: php artisan migrate --force
 
       - name: Run tests
-        run: php artisan test
+        run: composer run test
