--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
         ],
         "test": [
             "@php artisan config:clear --ansi",
-            "@php artisan test"
+            "@php artisan test --env=testing"
         ]
     },
     "extra": {
