Configures testing environment and adds cache clearing
Updates the testing environment to use a dedicated database.

Adds a composer command to clear the application cache, config, routes, and views.

Extends test suite to include unit tests.

--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
+        "clear-cache": "php artisan cache:clear && php artisan config:clear && php artisan route:clear && php artisan view:clear",
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
