Improves report handling and quality checks
Adds report flag functionality for duplicate and low-quality reports.

Implements jobs to automatically check for duplicated reports and assess report quality, improving data integrity and reducing manual moderation.

Updates report status notification to include damage type.

Refactors report index to use PostGIS geography functions and validates lat, lng, and radius.

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "clickbar/laravel-magellan": "^2.0",
+        "google/cloud-vision": "^2.0",
         "inertiajs/inertia-laravel": "^2.0",
         "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
