--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "paxha/laravel-fcm": "^3.1",
+        "spatie/laravel-query-builder": "^6.3",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
