--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "concurrently": "^9.0.1",
         "date-fns": "^4.1.0",
         "laravel-vite-plugin": "^1.0",
+        "lodash-es": "^4.17.21",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.2.1",
         "tailwind-merge": "^3.2.0",
