--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "dependencies": {
         "@fawmi/vue-google-maps": "^0.9.79",
         "@inertiajs/vue3": "^2.0.0",
+        "@primeuix/themes": "^1.2.3",
         "@tailwindcss/vite": "^4.1.1",
         "@tanstack/vue-table": "^8.21.3",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
+        "chart.js": "^4.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
@@ -38,10 +40,10 @@
         "laravel-vite-plugin": "^1.0",
         "lodash-es": "^4.17.21",
         "lucide-vue-next": "^0.468.0",
-        "reka-ui": "^2.2.1",
-        "tailwind-merge": "^3.2.0",
+        "reka-ui": "^2.4.1",
+        "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.1",
-        "tw-animate-css": "^1.2.5",
+        "tw-animate-css": "^1.3.6",
         "typescript": "^5.2.2",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
